@@ -38,6 +38,12 @@ Upgrading from Solr 3.5
 * SOLR-3040: The DIH's admin UI (dataimport.jsp) now requires DIH request handlers to start with
   a '/'. (dsmiley)
 
+* SOLR-3161: <requestDispatcher handleSelect="false"> is now the default. An existing config will
+  probably work as-is because handleSelect was explicitly enabled in default configs. HandleSelect
+  makes /select work as well as enables the 'qt' parameter. Instead, consider explicitly
+  configuring /select as is done in the example solrconfig.xml, and register your other search
+  handlers with a leading '/' which is a recommended practice.  (David Smiley, Erik Hatcher)
+
 New Features
 ----------------------
 * SOLR-2854: Now load URL content stream data (via stream.url) when called for during request handling,
